2009-01-22  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c (twitux_app_show_notification):
	Plug leak, and use better notification defaults.

2009-01-21  Brian Pepple  <bpepple@fedoraproject.org>
	
	* src/twitux-send-message-dialog.c (message_set_characters_available):
	Show character count over the 140 character maximum as '-n'. (#1961611)

2009-01-21  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c:
	* src/twitux-parser.[ch]: 
	Load the timeline from memory, and don't bother saving
	a local copy. Plug a few memory leaks also.

2009-01-18  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.[ch] (twitux_app_show_notification): 
	* src/twitux-parser.c (twitux_parser_timeline): 
	Display messages in notification. (Patch provided by Thomas Thurman)

2009-01-11  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux.h:
	* src/twitux-network.[ch]:
	Use https instead of http. (Evan McClain)

2009-01-01  Brian Pepple  <bpepple@fedoraproject.org>
	
	* src/twitux-parser.c (parser_convert_time):
	Fix incorrect pluralising of relative time. (Deskin Miller)

2008-12-28  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-label.c (label_msg_get_string): 
	Use strjoin. (Mike Lundy)

2008-12-24  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c (parser_twitux_node_status): 
	Fix the double-escaping of < and >. (Mike Lundy)


2008-12-24  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c (twitux_network_get_image): 
	Fix crash when fetching images. (Mike Lundy)

2008-12-14  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.68.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: 
	* src/twitux-spell.c:
	* src/Makefile.am:
	Use enchant for spell checking, instead of aspell.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-about.c (WEB_SITE):
	Update link to use Sourceforge summary page.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>
